add dataset background info

--- a/Data_Wrangling_Tutorials.ipynb
+++ b/Data_Wrangling_Tutorials.ipynb
@@ -13,6 +13,47 @@
     {
       "cell_type": "markdown",
       "source": [
+        "<div align=\"center\">\n",
+        "\n",
+        "# Data Wrangling in Python\n",
+        "</div>\n",
+        "\n",
+        "![prf_image](https://opendata.nfis.org/mapserver/PRF_Layout.jpg)\n",
+        "\n",
+        "This notebook provides python code to analyze the Petawawa Research Forest (PRF) inventory and ancillary datasets.\n",
+        "\n",
+        "All data is sourced from the following website:\n",
+        "\n",
+        "https://opendata.nfis.org/mapserver/PRF.html\n",
+        "\n",
+        "Please consult this page to get the most up to date version of the PRF data."
+      ],
+      "metadata": {
+        "id": "aLB5oJpgYUfb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Dataset Background\n",
+        "\n",
+        "The Petawawa Research Forest (PRF) is the oldest research forest in Canada, dating back to 1918. As such, the area has a rich historical record of data, and has recently become a remote sensing \"supersite\".\n",
+        "\n",
+        "You can read more about the PRF as a supersite in [White et al. (2019)](https://doi.org/10.5558/tfc2019-024).\n",
+        "\n",
+        "\n",
+        "**References:**\n",
+        "\n",
+        "White, Joanne C., et al. \"The Petawawa Research Forest: Establishment of a remote sensing supersite.\" The Forestry Chronicle 95.3 (2019): 149-156.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Cc8inL9KYroU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Install and load required packages"
       ],
       "metadata": {
@@ -519,6 +560,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
