created separate folder to store images

--- a/Descriptive_Analytics_Tutorials.ipynb
+++ b/Descriptive_Analytics_Tutorials.ipynb
@@ -1,27 +1,25 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "![plots_map](images/prf_ground_plots_map.png)"
+      ]
+    }
+  ],
   "metadata": {
     "colab": {
       "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
     },
     "language_info": {
       "name": "python"
     }
   },
-  "cells": [
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "lYLgKCvwTtS7"
-      },
-      "outputs": [],
-      "source": []
-    }
-  ]
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
