--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2504,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
    "id": "c3f23bb6",
    "metadata": {},
    "outputs": [
@@ -2547,7 +2547,7 @@
     "ax.set_title(\"PRF Ground Plots\", fontsize=16, fontweight='bold', loc='center')\n",
     "\n",
     "# Save plot to file\n",
-    "plt.savefig(\"prf_ground_plots_map.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(r\"images/prf_ground_plots_map.png\", dpi=300, bbox_inches='tight')\n",
     "\n"
    ]
   },
