--- a/Data_Wrangling_Tutorials.ipynb
+++ b/Data_Wrangling_Tutorials.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/subornaa/Data-Analytics-Tutorials/blob/main/Data_Wrangling_Tutorials.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "aLB5oJpgYUfb"
+      },
       "source": [
         "<div align=\"center\">\n",
         "\n",
@@ -27,23 +30,23 @@
         "https://opendata.nfis.org/mapserver/PRF.html\n",
         "\n",
         "Please consult this page to get the most up to date version of the PRF data."
-      ],
-      "metadata": {
-        "id": "aLB5oJpgYUfb"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Cc8inL9KYroU"
+      },
       "source": [
         "# Introduction and Dataset Background\n",
         "\n",
-        "The Petawawa Research Forest (PRF) is the oldest research forest in Canada, dating back to 1918. As such, the area has a rich historical record of data, and has recently become a remote sensing \"supersite\".\n",
+        "This tutorial focuses on sumarizing tabular data using Python.  The concepts covered are common in data pre-processing phase of an analysis workflow, but are useful in many different contexts.\n",
         "\n",
-        "You can read more about the PRF as a supersite in [White et al. (2019)](https://doi.org/10.5558/tfc2019-024).\n",
+        "The tutorial makes use of the Petawawa Research Forest (PRF) data, which is described in more detail in on the tutorial series [GitHub site](https://github.com/subornaa/Data-Analytics-Tutorials).\n",
         "\n",
         "## Tutorial goal\n",
         "\n",
-        "This tutorial will make use of individual tree data to answer questions relating to the PRF. We make use of the [`pandas`](https://pandas.pydata.org/docs/getting_started/index.html) python package to apply common data wrangling concepts such as dealing with null (NA) values, subsetting data, and summarizing data.\n",
+        "The goal of this tutorial is to make use of individual tree data to answer questions relating to the PRF. We make use of the [`pandas`](https://pandas.pydata.org/docs/getting_started/index.html) python package to apply common data wrangling concepts such as dealing with null (NA) values, subsetting data, and summarizing data.\n",
         "\n",
         "## Data Dictionary\n",
         "\n",
@@ -75,45 +78,60 @@
         "\n",
         "White, Joanne C., et al. \"The Petawawa Research Forest: Establishment of a remote sensing supersite.\" The Forestry Chronicle 95.3 (2019): 149-156.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "Cc8inL9KYroU"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Install and load required packages"
-      ],
       "metadata": {
         "id": "MI5x-6rPUZnk"
-      }
+      },
+      "source": [
+        "# Install and load required packages"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {
+        "id": "E7ZIUu7tUY2Y"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "import shutil\n",
         "import pandas as pd\n",
         "import geopandas as gpd"
-      ],
-      "metadata": {
-        "id": "E7ZIUu7tUY2Y"
-      },
-      "execution_count": 37,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Download data"
-      ],
       "metadata": {
         "id": "BA4ARToVT5ha"
-      }
+      },
+      "source": [
+        "# Download data"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kfh27N97UXAY",
+        "outputId": "82aaed21-c877-4081-c3dd-a4f3f2626f64"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Data has already been downloaded.\n",
+            "plots.gpkg  trees.csv\n"
+          ]
+        }
+      ],
       "source": [
         "# Download the data if it does not yet exist\n",
         "if not os.path.exists(\"data\"):\n",
@@ -124,78 +142,35 @@
         "  print(\"Data has already been downloaded.\")\n",
         "\n",
         "!ls data/"
-      ],
-      "metadata": {
-        "id": "kfh27N97UXAY",
-        "outputId": "82aaed21-c877-4081-c3dd-a4f3f2626f64",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Data has already been downloaded.\n",
-            "plots.gpkg  trees.csv\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Data Wrangling"
-      ],
       "metadata": {
         "id": "SH4tgTJ1Vq9n"
-      }
+      },
+      "source": [
+        "# Data Wrangling"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "trees_df = pd.read_csv(\"data/trees.csv\")\n",
-        "trees_df.head()\n"
-      ],
+      "execution_count": 39,
       "metadata": {
-        "id": "E0L6BPf8VshT",
-        "outputId": "e7f77023-2328-4caa-d1f8-627f501ce278",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        }
+        },
+        "id": "E0L6BPf8VshT",
+        "outputId": "e7f77023-2328-4caa-d1f8-627f501ce278"
       },
-      "execution_count": 39,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "   tree_spec PlotName  TreeID  TreeSpec Origin Status   DBH CrownClass  \\\n",
-              "0          1   PRF001    24.0         1      P      D  10.1        NaN   \n",
-              "1          1   PRF001    46.0         1      P      D   9.9        NaN   \n",
-              "2          2   PRF001    20.0         2      N      L  67.5          D   \n",
-              "3          2   PRF001    50.0         2      N      L  57.9          D   \n",
-              "4          1   PRF001    10.0         1      N      L  55.9          D   \n",
-              "\n",
-              "  QualityClass  DecayClass  ...     BA_all  TPH_all codom      domht  ht_meas  \\\n",
-              "0          NaN         1.0  ...  33.601655     2688     N  12.223077      NaN   \n",
-              "1          NaN         2.0  ...  33.601655     2688     N  12.223077      NaN   \n",
-              "2            A         NaN  ...  33.601655     2688     Y  33.433333     33.9   \n",
-              "3            U         NaN  ...  33.601655     2688     Y  33.433333      NaN   \n",
-              "4            A         NaN  ...  33.601655     2688     Y  33.433333     33.0   \n",
-              "\n",
-              "   stems       mvol       tvol       biomass   size  \n",
-              "0     16   0.000000   0.708735    393.396400  Poles  \n",
-              "1     16   0.000000   0.673254    375.305379  Poles  \n",
-              "2     16  77.327438  79.482658  39691.639950  Large  \n",
-              "3     16  56.444281  58.117292  28251.255888  Large  \n",
-              "4     16  48.008649  49.833743  24501.838779  Large  \n",
-              "\n",
-              "[5 rows x 27 columns]"
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "trees_df"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-a2823b30-9ef0-41ec-bd73-2ea774bdea77\" class=\"colab-df-container\">\n",
@@ -575,120 +550,132 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "trees_df"
-            }
+            "text/plain": [
+              "   tree_spec PlotName  TreeID  TreeSpec Origin Status   DBH CrownClass  \\\n",
+              "0          1   PRF001    24.0         1      P      D  10.1        NaN   \n",
+              "1          1   PRF001    46.0         1      P      D   9.9        NaN   \n",
+              "2          2   PRF001    20.0         2      N      L  67.5          D   \n",
+              "3          2   PRF001    50.0         2      N      L  57.9          D   \n",
+              "4          1   PRF001    10.0         1      N      L  55.9          D   \n",
+              "\n",
+              "  QualityClass  DecayClass  ...     BA_all  TPH_all codom      domht  ht_meas  \\\n",
+              "0          NaN         1.0  ...  33.601655     2688     N  12.223077      NaN   \n",
+              "1          NaN         2.0  ...  33.601655     2688     N  12.223077      NaN   \n",
+              "2            A         NaN  ...  33.601655     2688     Y  33.433333     33.9   \n",
+              "3            U         NaN  ...  33.601655     2688     Y  33.433333      NaN   \n",
+              "4            A         NaN  ...  33.601655     2688     Y  33.433333     33.0   \n",
+              "\n",
+              "   stems       mvol       tvol       biomass   size  \n",
+              "0     16   0.000000   0.708735    393.396400  Poles  \n",
+              "1     16   0.000000   0.673254    375.305379  Poles  \n",
+              "2     16  77.327438  79.482658  39691.639950  Large  \n",
+              "3     16  56.444281  58.117292  28251.255888  Large  \n",
+              "4     16  48.008649  49.833743  24501.838779  Large  \n",
+              "\n",
+              "[5 rows x 27 columns]"
+            ]
           },
+          "execution_count": 39,
           "metadata": {},
-          "execution_count": 39
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "trees_df = pd.read_csv(\"data/trees.csv\")\n",
+        "trees_df.head()\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## How many trees are in the dataset? How many permanent sample plots (PSPs)?"
-      ],
       "metadata": {
         "id": "syV6p1FLmus-"
-      }
+      },
+      "source": [
+        "## How many trees are in the dataset? How many permanent sample plots (PSPs)?"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Add your code here"
-      ],
+      "execution_count": 40,
       "metadata": {
         "id": "-iuO37E2m4HH"
       },
-      "execution_count": 40,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Add your code here"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Which column(s) in the trees data frame contain NAs? How many rows contain NAs?"
-      ],
       "metadata": {
         "id": "t7uKMgIrm807"
-      }
+      },
+      "source": [
+        "## Which column(s) in the trees data frame contain NAs? How many rows contain NAs?"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Add your code here"
-      ],
+      "execution_count": 41,
       "metadata": {
         "id": "7sxqd1oQm-DT"
       },
-      "execution_count": 41,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Add your code here"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Solutions"
-      ],
       "metadata": {
         "id": "zYSsMjuwm_mr"
-      }
+      },
+      "source": [
+        "# Solutions"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nmirFgQknF_Q",
+        "outputId": "2eab1c78-d9ee-4e2a-80c7-37ad45273739"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "12590\n",
+            "12590\n"
+          ]
+        }
+      ],
       "source": [
         "# How many trees are in the dataset? How many permanent sample plots (PSPs)?\n",
         "\n",
         "print(trees_df.shape[0])\n",
         "\n",
         "print(len(trees_df))"
-      ],
-      "metadata": {
-        "id": "nmirFgQknF_Q",
-        "outputId": "2eab1c78-d9ee-4e2a-80c7-37ad45273739",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "12590\n",
-            "12590\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Which column(s) in the trees data frame contain NAs? How many rows contain NAs?\n",
-        "\n",
-        "col_na_counts = trees_df.isnull().sum()\n",
-        "\n",
-        "print(\"Columns that contain NAs:\\n\\n\", col_na_counts[col_na_counts > 0])\n",
-        "\n",
-        "trees_no_nas = trees_df.dropna()\n",
-        "\n",
-        "print(\"\\n\\nNumber of rows with NAs:\\n\\n\", len(trees_df) - len(trees_no_nas))\n",
-        "\n",
-        "print(f\"\\n\\nThere are {len(trees_no_nas)} rows in the DF which contain no NA values.\")"
-      ],
+      "execution_count": 43,
       "metadata": {
-        "id": "vKXjY0cmtDls",
-        "outputId": "ae5edb0c-6b54-41ff-aa45-26abb74b915f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vKXjY0cmtDls",
+        "outputId": "ae5edb0c-6b54-41ff-aa45-26abb74b915f"
       },
-      "execution_count": 43,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Columns that contain NAs:\n",
             "\n",
@@ -712,56 +699,35 @@
             "There are 0 rows in the DF which contain no NA values.\n"
           ]
         }
+      ],
+      "source": [
+        "# Which column(s) in the trees data frame contain NAs? How many rows contain NAs?\n",
+        "\n",
+        "col_na_counts = trees_df.isnull().sum()\n",
+        "\n",
+        "print(\"Columns that contain NAs:\\n\\n\", col_na_counts[col_na_counts > 0])\n",
+        "\n",
+        "trees_no_nas = trees_df.dropna()\n",
+        "\n",
+        "print(\"\\n\\nNumber of rows with NAs:\\n\\n\", len(trees_df) - len(trees_no_nas))\n",
+        "\n",
+        "print(f\"\\n\\nThere are {len(trees_no_nas)} rows in the DF which contain no NA values.\")"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "trees_df.isnull().sum()"
-      ],
+      "execution_count": 44,
       "metadata": {
-        "id": "leu9cIB3t2TK",
-        "outputId": "897aac1e-e354-4b73-e139-8fe53e534e8a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 930
-        }
+        },
+        "id": "leu9cIB3t2TK",
+        "outputId": "897aac1e-e354-4b73-e139-8fe53e534e8a"
       },
-      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "tree_spec           0\n",
-              "PlotName            0\n",
-              "TreeID           1470\n",
-              "TreeSpec            0\n",
-              "Origin              0\n",
-              "Status              0\n",
-              "DBH                 0\n",
-              "CrownClass       1964\n",
-              "QualityClass     1965\n",
-              "DecayClass      12093\n",
-              "Ht                  0\n",
-              "HLF             12578\n",
-              "HtFlag          12412\n",
-              "phf                 0\n",
-              "baha                0\n",
-              "CD_ht               0\n",
-              "Int_ht           2846\n",
-              "BA_all              0\n",
-              "TPH_all             0\n",
-              "codom               0\n",
-              "domht               0\n",
-              "ht_meas          8063\n",
-              "stems               0\n",
-              "mvol                0\n",
-              "tvol                0\n",
-              "biomass           248\n",
-              "size                0\n",
-              "dtype: int64"
-            ],
             "text/html": [
               "<div>\n",
               "<style scoped>\n",
@@ -896,26 +862,62 @@
               "  </tbody>\n",
               "</table>\n",
               "</div><br><label><b>dtype:</b> int64</label>"
+            ],
+            "text/plain": [
+              "tree_spec           0\n",
+              "PlotName            0\n",
+              "TreeID           1470\n",
+              "TreeSpec            0\n",
+              "Origin              0\n",
+              "Status              0\n",
+              "DBH                 0\n",
+              "CrownClass       1964\n",
+              "QualityClass     1965\n",
+              "DecayClass      12093\n",
+              "Ht                  0\n",
+              "HLF             12578\n",
+              "HtFlag          12412\n",
+              "phf                 0\n",
+              "baha                0\n",
+              "CD_ht               0\n",
+              "Int_ht           2846\n",
+              "BA_all              0\n",
+              "TPH_all             0\n",
+              "codom               0\n",
+              "domht               0\n",
+              "ht_meas          8063\n",
+              "stems               0\n",
+              "mvol                0\n",
+              "tvol                0\n",
+              "biomass           248\n",
+              "size                0\n",
+              "dtype: int64"
             ]
           },
+          "execution_count": 44,
           "metadata": {},
-          "execution_count": 44
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "trees_df.isnull().sum()"
       ]
     }
   ],
   "metadata": {
     "colab": {
+      "include_colab_link": true,
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.13.2"
     }
   },
   "nbformat": 4,
