added in the colab button and removed markings in studetn version

--- a/Descriptive Analytics/Descriptive_Analytics_Tutorials.ipynb
+++ b/Descriptive Analytics/Descriptive_Analytics_Tutorials.ipynb
@@ -2,6 +2,13 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/subornaa/Data-Analytics-Tutorials/blob/main/Descriptive_Analytics_Tutorials.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "tPM3a_eO-DHa"
       },
@@ -73,7 +80,7 @@
         "id": "BfXCNIx4Asmp"
       },
       "source": [
-        "#Part 1: Download data"
+        "# Part 1: Download data"
       ]
     },
     {
@@ -82,7 +89,7 @@
         "id": "kXRwi2xLd4QU"
       },
       "source": [
-        "The following block of code retrieves the tree dataset directly from Google Drive. This approach streamlines data storage and access, making it more efficient to manage large datasets. Please note that the code is designed to work only on Unix-based systems such as macOS, Linux, and Colab. If you are using a Windows device and running notebooks locally, the recommended approach is to manually download the dataset, store it in your local drive, and link it to this notebook accordingly. <mark>G</mark>"
+        "The following block of code retrieves the tree dataset directly from Google Drive. This approach streamlines data storage and access, making it more efficient to manage large datasets. Please note that the code is designed to work only on Unix-based systems such as macOS, Linux, and Colab. If you are using a Windows device and running notebooks locally, the recommended approach is to manually download the dataset, store it in your local drive, and link it to this notebook accordingly."
       ]
     },
     {
@@ -129,12 +136,12 @@
         "id": "8UKpNn5aisWm"
       },
       "source": [
-        "Lets first try to get a glance of this dataset. Load the dataset with the correct function and display the first 5 rows. <mark>G</mark>"
+        "Lets first try to get a glance of this dataset. Load the dataset with the correct function and display the first 5 rows."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -156,7 +163,7 @@
         "id": "d283Hze-jECv"
       },
       "source": [
-        "Lets try to display the number of unique plots and TreeIDs in the dataset. <mark>G</mark>"
+        "Lets try to display the number of unique plots and TreeIDs in the dataset."
       ]
     },
     {
@@ -198,7 +205,7 @@
         "id": "kyYbGQHmlajh"
       },
       "source": [
-        "Lets try to get all the trees with the plot name `PRF015` <mark>G</mark>"
+        "Lets try to get all the trees with the plot name `PRF015`"
       ]
     },
     {
@@ -225,7 +232,7 @@
         "id": "TXVZmosomwGJ"
       },
       "source": [
-        "An equivalent way to write the above code is shown below. Using string-based queries is often more readable, but both methods are valid and functionally the same. <mark>G</mark>"
+        "An equivalent way to write the above code is shown below. Using string-based queries is often more readable, but both methods are valid and functionally the same."
       ]
     },
     {
@@ -250,7 +257,7 @@
         "id": "BZb-ROS7fOVy"
       },
       "source": [
-        "# Part 2: Summary Statistics <mark>Gurman Start</mark>\n",
+        "# Part 2: Summary Statistics\n",
         "\n",
         "Let us examine a specific column in the dataset to explore potential trends. For the column `TPH_all`, calculate the maximum, minimum, median, and mean values, grouped by the `tree_spec` column."
       ]
@@ -336,9 +343,7 @@
       "source": [
         "As we can see, while the majority of the values fall below 6,000, there are several noticeable outliers that could significantly skew the results of many machine learning models. This raises an important question: should we remove these outliers, or include them in our analysis moving forward? The answer depends on the context and purpose of the analysis. If the outliers represent genuine observations and are relevant to the problem at hand, it may be appropriate to include them, possibly with robust modeling techniques that can handle their influence (which will be covered in later chapters.).***It is important to avoid discarding data without a valid justification. Any reduction or pruning of the dataset should be supported by clear, logical reasoning.*** For example, if outliers result from data entry errors or are not representative of the population you're studying, excluding them could be justified. If data is related to your outcome however, more rigious statistical methods will have to be used, of which will be covered later.\n",
         "\n",
-        "Regardless of the approach you choose, the key takeaway is this: always visualize your data before drawing conclusions. Relying solely on summary statistics from earlier steps can be misleading, as they often fail to reveal the full distribution and nuances of the dataset.\n",
-        "\n",
-        "<mark>Gurman end</mark>"
+        "Regardless of the approach you choose, the key takeaway is this: always visualize your data before drawing conclusions. Relying solely on summary statistics from earlier steps can be misleading, as they often fail to reveal the full distribution and nuances of the dataset.\n"
       ]
     },
     {
@@ -443,15 +448,6 @@
         "\n",
         "#plt.tight_layout()\n",
         "#plt.show()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Okr8t_J9yIem"
-      },
-      "source": [
-        "<mark>Gurman - added labels and other expanded the format of the graph as another exercise. Included a small summary below<mark>"
       ]
     },
     {
@@ -572,7 +568,7 @@
         "id": "S_-uIdoUfw80"
       },
       "source": [
-        "# Part 5: Covariance and Correlation <mark>Gurman Start</mark>\n",
+        "# Part 5: Covariance and Correlation\n",
         "\n",
         "Lets switch gears now into taking a look at covariance and correlation.\n",
         "\n",
@@ -697,7 +693,7 @@
         "\n",
         "Correlation is calculated in a way that makes it scale-invariant, meaning it is unaffected by the units of the variables. This makes it particularly useful for understanding the strength and direction of a relationship between features.\n",
         "\n",
-        "Covariance, on the other hand, reflects the direction of the linear relationship but not its strength, and it is sensitive to scale. While both metrics provide insight into relationships between variables, correlation is generally more useful for feature selection. <mark>Gurman end</mark>"
+        "Covariance, on the other hand, reflects the direction of the linear relationship but not its strength, and it is sensitive to scale. While both metrics provide insight into relationships between variables, correlation is generally more useful for feature selection."
       ]
     },
     {
