add CRS check for all spatial datasets

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2611,6 +2611,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d6794dc2",
+   "metadata": {},
+   "source": [
+    "# Check CRS of all spatial data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37b52605",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boundary: EPSG:32618\n",
+      "Plots EPSG:32618\n",
+      "Water EPSG:32618\n",
+      "P99 Raster EPSG:32618\n",
+      "Lidar Index EPSG:2959\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Boundary:\", boundary_gdf.crs)\n",
+    "print(\"Plots\", plots_2018_gdf.crs)\n",
+    "print(\"Water\", water_gdf.crs)\n",
+    "print(\"P99 Raster\", p99.rio.crs)\n",
+    "print(\"Lidar Index\", lidar_index.crs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f19f4316",
    "metadata": {},
    "source": [
