Change font of goals in geospatial tutorial

--- a/Geospatial_Data_Tutorials.ipynb
+++ b/Geospatial_Data_Tutorials.ipynb
@@ -47,11 +47,11 @@
         "\n",
         "This tutorial has three goals, motivated by the three aformentioned data types.\n",
         "\n",
-        "`Goal 1: Summarize the coverage of different water bodies within the PRF and provide summary statistics.`\n",
+        "**Goal 1: Summarize the coverage of different water bodies within the PRF and provide summary statistics.**\n",
         "\n",
-        "`Goal 2: Analyze the LiDAR-derived 99th height percentile raster and compare this height with plot level tree height measurements.`\n",
+        "**Goal 2: Analyze the LiDAR-derived 99th height percentile raster and compare this height with plot level tree height measurements.**\n",
         "\n",
-        "`Goal 3: Perform height normalization on a subset of LiDAR point cloud data and analyze the forest structure from a 3-D perspective`\n",
+        "**Goal 3: Perform height normalization on a subset of LiDAR point cloud data and analyze the forest structure from a 3-D perspective**\n",
         "\n",
         "-----\n",
         "\n",
