[Collab]-Added-collab-svg-and-link

--- a/Data_Wrangling_Tutorials.ipynb
+++ b/Data_Wrangling_Tutorials.ipynb
@@ -2,6 +2,13 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/subornaa/Data-Analytics-Tutorials/blob/main/Descriptive_Wrangling_Tutorials.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "aLB5oJpgYUfb"
       },
@@ -3445,6 +3452,13 @@
         "display(unknown_tree_ids)\n",
         "print(trees_df.tail())\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
