add pyarrow to required package installations

--- a/Lasso_and_Ridge_Regression.ipynb
+++ b/Lasso_and_Ridge_Regression.ipynb
@@ -74,7 +74,8 @@
         "# !pip install geopandas==1.0.1\n",
         "# !pip install matplotlib==3.10.1\n",
         "# !pip install rioxarray==0.19.0\n",
-        "# !pip install spyndex==0.5.0"
+        "# !pip install spyndex==0.5.0\n",
+        "# !pip install pyarrow==20.0.0"
       ]
     },
     {
