Added-introduction-in-sections

--- a/Data_Wrangling_Tutorials.ipynb
+++ b/Data_Wrangling_Tutorials.ipynb
@@ -659,7 +659,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Understanding dataset"
+        "# Understanding dataset\n",
+        "\n",
+        "Before conducting any analysis, it is crucial to develop a thorough understanding of the dataset. This involves exploring the structure, types of variables, and the context in which the data was collected. In forestry research, understanding the data helps ensure that ecological variables—such as species, DBH, and biomass—are interpreted correctly and that any patterns or anomalies are recognized early. This foundational step guides the selection of appropriate analytical methods and helps prevent misinterpretation of results."
       ]
     },
     {
@@ -2567,7 +2569,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Identifying & Handling missing data"
+        "# Identifying & Handling missing data\n",
+        "\n",
+        "Missing data is a common challenge in ecological and forestry datasets due to field limitations, measurement errors, or data entry issues. Identifying and appropriately handling missing values is essential to maintain the integrity and reliability of the analysis. Effective strategies—such as imputation, exclusion, or flagging missing entries—help ensure that the dataset remains robust and that subsequent analyses or models are not biased or compromised by incomplete information. Addressing missing data transparently also supports reproducibility and scientific rigor in forestry research."
       ]
     },
     {
@@ -4683,15 +4687,17 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Outliers and Anomalies"
+        "# Outliers and Anomalies\n",
+        "\n",
+        "Visualizing outliers and anomalies is a key step in the data preparation process, especially for ecological and forestry datasets where measurement errors or rare events can significantly influence results.\n",
+        "\n",
+        "By generating plots such as boxplots, scatterplots, or histograms, analysts can quickly identify data points that deviate markedly from expected patterns. Detecting these outliers early allows for informed decisions about whether to investigate, correct, or exclude them, ultimately improving the quality and reliability of subsequent analyses. Visual tools not only make anomalies more apparent but also facilitate transparent communication of data issues to collaborators and stakeholders."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**An introduction, why we need it and how that will be useful for any arbitrary dataset**'\n",
-        "\n",
         "cleaned_tree_data\n",
         " - showing specific column of boolean outlier (add in the tree_data)\n",
         " - more plots for biomass outlier other than exercises\n",
