change preprocessing to include manual zipping of files generated from other notebooks in tutorial series

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 125,
    "id": "f25af3a6",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 126,
    "id": "0bdeaabd",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 127,
    "id": "97819115",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 128,
    "id": "6c49750f",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 129,
    "id": "c315c262",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 130,
    "id": "9acace79",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 131,
    "id": "2a90b15a",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 132,
    "id": "23d73648",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 133,
    "id": "0ffcd922",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
          "type": "string"
         }
        ],
-       "ref": "c3b89fea-c78a-43d7-9aa7-86b9194b02bd",
+       "ref": "bc303f7a-1179-4bb8-8e00-32677b8ab6fb",
        "rows": [
         [
          "0",
@@ -1637,7 +1637,7 @@
        "[12590 rows x 15 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1665,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 134,
    "id": "847f9a48",
    "metadata": {},
    "outputs": [
@@ -1678,7 +1678,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 135,
    "id": "0b067111-d0ef-43e5-b16e-2899aa6c9eab",
    "metadata": {},
    "outputs": [],
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 136,
    "id": "02c214fe",
    "metadata": {},
    "outputs": [
@@ -1890,7 +1890,7 @@
        "[555 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 137,
    "id": "7513c862",
    "metadata": {},
    "outputs": [
@@ -1918,7 +1918,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 138,
    "id": "63cb2190",
    "metadata": {},
    "outputs": [
@@ -2057,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 139,
    "id": "63e5f400",
    "metadata": {},
    "outputs": [
@@ -2144,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 140,
    "id": "ecae7ea3",
    "metadata": {},
    "outputs": [
@@ -2245,7 +2245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 141,
    "id": "98e3e9ed",
    "metadata": {},
    "outputs": [
@@ -2275,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 142,
    "id": "50d730bc",
    "metadata": {},
    "outputs": [
@@ -2285,7 +2285,7 @@
        "(67, 366, 746)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2303,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 143,
    "id": "a7ab6959",
    "metadata": {},
    "outputs": [
@@ -2323,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 144,
    "id": "193c0c06",
    "metadata": {},
    "outputs": [
@@ -2343,7 +2343,7 @@
        "<Axes: title={'center': 'avg_95'}>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2362,7 +2362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 145,
    "id": "36106ef8",
    "metadata": {},
    "outputs": [],
@@ -2373,7 +2373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 146,
    "id": "8d03b26c",
    "metadata": {},
    "outputs": [
@@ -2390,7 +2390,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2419,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 147,
    "id": "554081d8",
    "metadata": {},
    "outputs": [
@@ -2449,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 148,
    "id": "f14c84c1",
    "metadata": {},
    "outputs": [
@@ -2459,7 +2459,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2489,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 149,
    "id": "8fc0e039",
    "metadata": {},
    "outputs": [
@@ -2520,7 +2520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 150,
    "id": "875a1a63",
    "metadata": {},
    "outputs": [
@@ -2557,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 151,
    "id": "a7530761",
    "metadata": {},
    "outputs": [
@@ -2593,7 +2593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 152,
    "id": "a5a4e921",
    "metadata": {},
    "outputs": [
@@ -2623,7 +2623,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2651,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 153,
    "id": "37b52605",
    "metadata": {},
    "outputs": [
@@ -2685,7 +2685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 154,
    "id": "9775b7f3",
    "metadata": {},
    "outputs": [
@@ -2723,7 +2723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 155,
    "id": "143b7f41",
    "metadata": {},
    "outputs": [
@@ -2778,47 +2778,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "0ef2605e",
+   "cell_type": "markdown",
+   "id": "20608aca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Zipping following files into prf_data.zip:\n",
-      "\n",
-      "data\\boundary.gpkg\n",
-      "data\\trees.csv\n",
-      "data\\plots.gpkg\n",
-      "data\\water.gpkg\n",
-      "data\\als_metrics.tif\n",
-      "data\\forest_point_cloud.las\n",
-      "data\\forest_point_cloud_footprint.gpkg\n",
-      "data\\petawawa_s2_2018.tif\n",
-      "data\\petawawa_s2_2024.tif\n",
-      "Data zipped to prf_data.zip\n"
-     ]
-    }
-   ],
    "source": [
-    "# Zip data so it can be uploaded to google drive\n",
+    "# Run all tutorials, then zip the files listed above in addition to those listed below generated from the tutotials and upload to google drive\n",
     "\n",
-    "zip_file_name = 'prf_data.zip'\n",
+    "**Additional data to zip***\n",
     "\n",
-    "files_to_compress = out_dict.values()\n",
-    "\n",
-    "zip_object = zipfile.ZipFile(zip_file_name, 'w')\n",
-    "\n",
-    "print(f\"Zipping following files into {zip_file_name}:\\n\\n{\"\\n\".join(files_to_compress)}\")\n",
-    "\n",
-    "for file_name in files_to_compress:\n",
-    "    zip_object.write(file_name, arcname=os.path.basename(file_name), compress_type=zipfile.ZIP_DEFLATED)\n",
-    "\n",
-    "zip_object.close()\n",
-    "\n",
-    "print(f\"Data zipped to {zip_file_name}\")"
+    "- `predictors.csv`"
    ]
   }
  ],
