minor update to unsupervised classification tutorial, not done yet

--- a/Unsupervised_Learning.ipynb
+++ b/Unsupervised_Learning.ipynb
@@ -27,7 +27,12 @@
     "- Do we want multiple forest cover classes?\n",
     "- We want classes that are spectrally unique\n",
     "- If we don't have sufficient prior knowledge about a dataset, unsupervised learning can help us better understand the structure of the data\n",
+    "- Unsupervised classification is effective in situations where we might not have training data\n",
     "\n",
+    "TODO: add citations:\n",
+    "\n",
+    "- https://doi.org/10.1093/forestry/cpw011\n",
+    "- And one for Sentinel-2 landcover classification\n",
     "\n",
     "\n",
     "\n",
