remove unnecessary imports

--- a/Unsupervised_Learning.ipynb
+++ b/Unsupervised_Learning.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "acb7636c",
    "metadata": {},
    "outputs": [],
@@ -56,9 +56,7 @@
     "import geopandas as gpd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.cluster import KMeans\n",
-    "import matplotlib.patches as mpatches\n",
-    "from matplotlib import colormaps"
+    "from sklearn.cluster import KMeans"
    ]
   },
   {
